--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ header{
 	position: fixed;
 	top: 0px;
 	border: 1px solid black;
-	background-color: rgb(73, 71, 71);
+	background-color: #218138;
 }
 
 header li {
@@ -36,7 +36,7 @@ footer{
 	position: relative;
 	bottom: 0;
 	width: 100%;
-	background-color: rgb(73, 71, 71);
+	background-color: #218138;
 }
 
 .footer-dark {
