--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,8 @@ header{
 	position: fixed;
 	top: 0px;
 	border: 1px solid black;
-	background-color: #218138;
+	background-color: #36ff00
+	;
 }
 
 header li {
@@ -36,7 +37,7 @@ footer{
 	position: relative;
 	bottom: 0;
 	width: 100%;
-	background-color: #218138;
+	background-color: #36ff00;
 }
 
 .footer-dark {
