--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,9 @@
 body {
-    color: black;
+    color: #ebfaec;
+	background-color: #40444b;
+}
+.only-center {
+	margin-left: 5%;
 }
 
 nav {
@@ -7,8 +11,8 @@ nav {
 }
 
 #logo{
-	max-width: 80%;
-	margin:10px;
+	max-width: 70%;
+	margin:5%;
 }
 
 body header{
@@ -20,6 +24,7 @@ header{
 	display: flex;
 	top: 0;
 	background-color: #36393f;
+	z-index: 1;
 }
 
 header::before,
@@ -30,7 +35,7 @@ header::after {
   left: 0;
   background: linear-gradient(45deg, #ff0000, #00f0f0, #00ff00, #0000ff, #ff0000, #00f0f0, #00ff00, #0000ff, #f00f0f);
   width: 100%;
-  height: 1%;
+  height: 1.5%;
   transform: scale(2);
   z-index: -1;
   background-size: 300%;
@@ -44,22 +49,92 @@ header::after {
   }
 
 header li {
-    margin:1em;
-    padding:1em;
+	margin-top: 3%;
 	display: inline-block;
 	text-align:center;
-    width: 20%;
-    color: black;
+    width: 15%;
 	text-decoration: none;
 }
 
+.svg-wrapper {
+    position: relative;
+    top: 0;
+    transform: translateY(-50%);
+    margin: 0 auto;
+    width: 500px;
+  }
+  .shape1,
+  .shape2 {
+    stroke-dasharray: 1120;
+    stroke-width: 5px;
+    fill: transparent;
+    stroke: #19f6e8;
+    border-bottom: 5px solid black;
+    transition-timing-function: linear;
+    transition: stroke-dashoffset 4s, stroke-dasharray 4s;
+  }
+  .shape1 {
+    stroke-dashoffset: 1120;
+  }
+  .shape2 {
+    stroke-dashoffset: -1120;
+  }
+  .text {
+    font-family: 'Roboto Condensed';
+    font-size: 22px;
+    line-height: 32px;
+    letter-spacing: 8px;
+    color: #fff;
+    top: -48px;
+    position: relative;
+  }
+  .svg-wrapper:hover .shape1,
+  .svg-wrapper:hover .shape2 {
+    stroke-dashoffset: 0;
+    stroke-dasharray: 1120;
+  }
+
+.box {
+	flex-direction: column;
+    color: #ebfaec;
+    display: flex;
+	align-items: center;
+    justify-content: center;
+    width: 400px;
+    height: 150px;
+    background-color: #40444b;
+    position: relative;
+  }
+
+.box::before,
+.box::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(45deg, #ff0000, #00f0f0, #00ff00, #0000ff, #ff0000, #00f0f0, #00ff00, #0000ff, #f00f0f);
+  width: 100%;
+  height: 100%;
+  transform: scale(1);
+  z-index: -1;
+  background-size: 500%;
+  animation: animate 10s infinite;
+}
+
+.box::after {
+    filter: blur(20px);
+  }
+
+@keyframes animate {
+    0% { background-position: 0 0; }
+    50% { background-position: 50% 0; }
+    100% { background-position: 0 0; }
+  }
 
 footer{
 	position: relative;
 	bottom: 0;
 	width: 100%;
-	
-	
 }
 
 footer::before,
