--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,173 +1,168 @@
 body {
     color: #ebfaec;
-	background-color: #40444b;
-}
-.only-center {
-	margin-left: 5%;
-	margin-top: 10%;
-  	margin-right: 5%;
-}
-
-nav {
-	display: inline;
-}
-
-#logo{
-	max-width: 70%;
-	margin:5%;
+    background-color: #40444b;
 }
 
 body header{
-	text-align: center;
+    text-align: center;
 }
 
 header{
-	position: fixed;
-	display: flex;
-	top: 0;
-	background-color: #36393f;
-	z-index: 1;
+    position: fixed;
+    display: flex;
+    top: 0;
+    background-color: #36393f;
+    z-index: 1;
 }	
 
 header::before,
 header::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background: linear-gradient(45deg, #128d5a, #199688, #0e7894, #128d5a, #199688, #0e7894);
-  width: 100%;
-  height: 1.7%;
-  transform: scale(2);
-  z-index: -1;
-  background-size: 300%;
-  animation: animate 2s infinite;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(45deg, #128d5a, #199688, #0e7894, #128d5a, #199688, #0e7894);
+    width: 100%;
+    height: 1.7%;
+    transform: scale(2);
+    z-index: -1;
+    background-size: 300%;
+    animation: animate 2s infinite;
 }
 
 @keyframes animate {
     0% { background-position: 0 0; }
     50% { background-position: 50% 0; }
     100% { background-position: 0 0; }
-  }
+}
 
 header li {
-	margin-top: 3%;
-	display: inline-block;
-	text-align:center;
-    	width: 10%;
-	text-decoration: none;
+    margin-top: 3%;
+    display: inline-block;
+    text-align:center;
+    width: 5%;
+    text-decoration: none;
+}
+
+nav {
+    display: inline;
+}
+
+#logo{
+    max-width: 70%;
+    margin:5%;
 }
 
 .box {
-	flex-direction: column;
+    flex-direction: column;
     color: #ebfaec;
     display: flex;
-	align-items: center;
+    align-items: center;
     justify-content: center;
     width: 400px;
     height: 150px;
     background-color: #40444b;
     position: relative;
     border-radius: 25%;
-  }
+}
 
 .box::before,
 .box::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(45deg, #128d5a, #199688, #0e7894, #128d5a, #199688, #0e7894);
-  width: 100%;
-  height: 100%;
-  transform: scale(1);
-  z-index: -1;
-  background-size: 500%;
-  animation: animate 10s infinite;
-  border-radius: 25%
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(45deg, #128d5a, #199688, #0e7894, #128d5a, #199688, #0e7894);
+    width: 100%;
+    height: 100%;
+    transform: scale(1);
+    z-index: -1;
+    background-size: 500%;
+    animation: animate 10s infinite;
+    border-radius: 25%
 }
 
 .box::after {
     filter: blur(20px);
-  }
+}
 
 @keyframes animate {
     0% { background-position: 0 0; }
     50% { background-position: 50% 0; }
     100% { background-position: 0 0; }
-  }
+}
 
 footer{
-	position: relative;
-	bottom: 0;
-	width: 100%;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 footer::before,
 footer::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: linear-gradient(45deg, #128d5a, #199688, #0e7894, #128d5a, #199688, #0e7894);
-  width: 66.65%;
-  height: 4%;
-  transform: scale(2);
-  z-index: -1;
-  background-size: 300%;
-  animation: animate 2s infinite;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(45deg, #128d5a, #199688, #0e7894, #128d5a, #199688, #0e7894);
+    width: 66.65%;
+    height: 4%;
+    transform: scale(2);
+    z-index: -1;
+    background-size: 300%;
+    animation: animate 2s infinite;
 }
 
 @keyframes animate {
     0% { background-position: 0 0; }
     50% { background-position: 50% 0; }
     100% { background-position: 0 0; }
-  }
+}
 
 .footer-dark{
-	background-color: #36393f;
+    background-color: #36393f;
 }
 
 .footer-dark ul {
-	padding: 0;
-	list-style: none;
-	line-height: 1.6;
-	font-size: 14px;
-	text-align: center;
-	opacity: 0.6;
+    padding: 0;
+    list-style: none;
+    line-height: 1.6;
+    font-size: 14px;
+    text-align: center;
+    opacity: 0.6;
 }
 
 .footer-dark ul li {
-	display: inline-block;
-	margin: 0.5em; 
+    display: inline-block;
+    margin: 0.5em; 
 }
 
 .footer-dark .item.social {
-	text-align: center;
+    text-align: center;
 }
 
 .footer-dark .item.social > a {
-	font-size: 20px;
-	width: 36px;
-	height: 36px;
-	line-height: 36px;
-	display:inline-block;
-	text-align:center;
-	border-radius:50%;
-	box-shadow:0 0 0 1px rgba(0, 0, 0, 0.4);
-	margin: 0 8px;
-	
-	opacity: 0.75;
+    font-size: 20px;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    box-shadow:0 0 0 1px rgba(0, 0, 0, 0.4);
+    margin: 0 8px;
+    opacity: 0.75;
 }
 
 .footer-dark .copyright {
-	text-align: center;
-	padding-top: 24px;
-	padding-bottom: 24px;
-	margin-bottom: 0;
-	opacity: 0.3;
-	font-size: 13px;
+    text-align: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    margin-bottom: 0;
+    opacity: 0.3;
+    font-size: 13px;
 }
+
 .logo {
     height: 250px;
     margin: auto;
@@ -180,12 +175,8 @@ footer::after {
 }
 
 @keyframes scroll {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(calc(-250px * 9));
-    }
+    0% {transform: translateX(0);}
+    100% {transform: translateX(calc(-250px * 9));}
 }
 
 .logo {
@@ -206,7 +197,6 @@ img:hover {
     transition: transform 1s;
 }
 
-.foto{
-  width: 150px;
-  height: 100%; 
+.only-center {
+    margin-left: 5%;
 }
