--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,10 @@ body {
     background-color: #40444b;
 }
 
+.only-center {
+  margin: 5%;
+}
+
 body header{
     text-align: center;
 }
@@ -195,10 +199,6 @@ footer::after {
 img:hover {
     transform: translateZ(20px);
     transition: transform 1s;
-}
-
-.only-center {
-    margin-left: 5%;
 }
 
 .ball{
