--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,13 @@ margin: 5%;
 margin-top: 4.5%;
 }
 
+main{
+  height: 89vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body header{
     text-align: center;
 }
